deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-api-deployment
  labels:
    app: url-shortener-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-api
  template:
    metadata:
      labels:
        app: url-shortener-api
    spec:
      containers:
        - name: url-shortener-api
          imagePullPolicy: Never
          image: url-shortener-api:1.0.0
          ports:
            - containerPort: 8080
              name: http
