ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: url-shortener-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: url-shortener-api.info
      http:
        paths:
          - path: /
            backend:
              serviceName: url-shortener-api-service
              servicePort: 80
